--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
-.App {
-  text-align: center;
+.forma{
+    margin:10px 50px 10px 50px;
+    background-color: rgb(211, 211, 211);
+    display: flex;
+    justify-content: space-around;
+    padding: 20px 10px;
+    
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.forma label{
+    padding: 10px;
+    margin-bottom: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.forma button{
+    background-color: rgb(34, 161, 34);
+    border: none;
+    border-radius: 5px;
+    width: 100px;
+    height: 20px;
+    margin-top: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+button:hover{
+    background-color: rgb(0, 85, 0);
+    color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.filmas button{
+    width: 80px;
+    height: 20px;
+    background-color: rgb(34, 161, 34);
+    border: none;
+    border-radius: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.filmasCard {
+    width: auto;
+    height: auto;
+    display: flex;
+    background-color: rgb(228, 228, 228);
+    margin: 30px 50px;
+    border-radius: 10px;
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);;
+
+    
+}
+
+.filmasCard img{
+    height: 300px;
+    width: 200px;
+}
+
+
+.text{
+    padding-left: 20px;
 }
